syntax = "proto3";


option go_package="github.com/amina-b/gRPC-basic/models";

message User{
    string name = 1;
    string email = 2;
    string age = 3;
}

service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}